--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ejercicio de Git Antonio Galisteo</title>
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
 <h2>Ejercicio de Git</h2>
+<p>Lorem fistrum ese que llega llevame al sircoo pupita no puedor mamaar benemeritaar a gramenawer llevame al sircoo te va a hasé pupitaa. Ese que llega qué dise usteer mamaar a gramenawer a wan pupita sexuarl fistro. Torpedo no puedor a wan benemeritaar jarl te voy a borrar el cerito torpedo benemeritaar torpedo diodeno jarl. Ese pedazo de condemor sexuarl te voy a borrar el cerito qué dise usteer te voy a borrar el cerito quietooor se calle ustée tiene musho peligro a wan pupita. Caballo blanco caballo negroorl tiene musho peligro hasta luego Lucas jarl tiene musho peligro qué dise usteer apetecan.</p>
+<p>Lorem fistrum ese que llega llevame al sircoo pupita no puedor mamaar benemeritaar a gramenawer llevame al sircoo te va a hasé pupitaa. Ese que llega qué dise usteer mamaar a gramenawer a wan pupita sexuarl fistro. Torpedo no puedor a wan benemeritaar jarl te voy a borrar el cerito torpedo benemeritaar torpedo diodeno jarl. Ese pedazo de condemor sexuarl te voy a borrar el cerito qué dise usteer te voy a borrar el cerito quietooor se calle ustée tiene musho peligro a wan pupita. Caballo blanco caballo negroorl tiene musho peligro hasta luego Lucas jarl tiene musho peligro qué dise usteer apetecan.</p>
 <p>Lorem fistrum ese que llega llevame al sircoo pupita no puedor mamaar benemeritaar a gramenawer llevame al sircoo te va a hasé pupitaa. Ese que llega qué dise usteer mamaar a gramenawer a wan pupita sexuarl fistro. Torpedo no puedor a wan benemeritaar jarl te voy a borrar el cerito torpedo benemeritaar torpedo diodeno jarl. Ese pedazo de condemor sexuarl te voy a borrar el cerito qué dise usteer te voy a borrar el cerito quietooor se calle ustée tiene musho peligro a wan pupita. Caballo blanco caballo negroorl tiene musho peligro hasta luego Lucas jarl tiene musho peligro qué dise usteer apetecan.</p>
 </body>
 </html>
